[gd_scene load_steps=17 format=2]

[ext_resource path="res://img/label_HP.png" type="Texture" id=1]
[ext_resource path="res://img/lifebar_bg.png" type="Texture" id=2]
[ext_resource path="res://gui/BombCounter.tscn" type="PackedScene" id=3]
[ext_resource path="res://gui/EmeraldCounter.tscn" type="PackedScene" id=4]
[ext_resource path="res://gui/GUI.gd" type="Script" id=5]
[ext_resource path="res://img/lifebar_fill.png" type="Texture" id=6]
[ext_resource path="res://img/energy_bar_fill.png" type="Texture" id=7]
[ext_resource path="res://img/label_HP_bg.png" type="Texture" id=8]
[ext_resource path="res://img/energy_bar_bg.png" type="Texture" id=9]
[ext_resource path="res://font/zn_font.tres" type="DynamicFont" id=10]
[ext_resource path="res://img/label_EP.png" type="Texture" id=11]

[sub_resource type="DynamicFontData" id=2]
font_path = "res://font/msyh.ttc"

[sub_resource type="DynamicFont" id=5]
extra_spacing_bottom = 8
font_data = SubResource( 2 )

[sub_resource type="DynamicFontData" id=6]
font_path = "res://font/msyh.ttc"

[sub_resource type="DynamicFont" id=3]
size = 20
font_data = SubResource( 6 )

[sub_resource type="DynamicFont" id=4]
size = 20
extra_spacing_bottom = -2
font_data = SubResource( 6 )

[node name="GUI" type="MarginContainer"]
anchor_right = 1.0
margin_bottom = 137.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
script = ExtResource( 5 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 20.0
margin_top = 20.0
margin_right = 1580.0
margin_bottom = 117.0

[node name="Bars" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 1560.0
margin_bottom = 97.0
size_flags_horizontal = 3

[node name="LifeBar" type="HBoxContainer" parent="HBoxContainer/Bars"]
margin_right = 1560.0
margin_bottom = 53.0

[node name="Count" type="MarginContainer" parent="HBoxContainer/Bars/LifeBar"]
margin_right = 100.0
margin_bottom = 53.0
rect_min_size = Vector2( 100, 40 )
custom_constants/margin_left = 0

[node name="Background" type="NinePatchRect" parent="HBoxContainer/Bars/LifeBar/Count"]
margin_right = 100.0
margin_bottom = 53.0
texture = ExtResource( 8 )

[node name="Title" type="TextureRect" parent="HBoxContainer/Bars/LifeBar/Count/Background"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -20.5
margin_right = 49.0
margin_bottom = 19.5
texture = ExtResource( 1 )
stretch_mode = 4

[node name="Number" type="Label" parent="HBoxContainer/Bars/LifeBar/Count/Background"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -50.0
margin_top = -20.5
margin_right = -9.0
margin_bottom = 19.5
custom_fonts/font = ExtResource( 10 )
text = "888888"
align = 2
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureProgress" type="TextureProgress" parent="HBoxContainer/Bars/LifeBar"]
margin_left = 104.0
margin_right = 500.0
margin_bottom = 53.0
value = 50.0
texture_under = ExtResource( 2 )
texture_progress = ExtResource( 6 )

[node name="Label" type="Label" parent="HBoxContainer/Bars/LifeBar/TextureProgress"]
modulate = Color( 1, 0, 0, 0 )
margin_left = 178.0
margin_top = 18.0
margin_right = 218.0
margin_bottom = 32.0
text = "1"

[node name="EnergyBar" type="HBoxContainer" parent="HBoxContainer/Bars"]
margin_top = 57.0
margin_right = 1560.0
margin_bottom = 97.0
__meta__ = {
"_edit_group_": true
}

[node name="Count" type="MarginContainer" parent="HBoxContainer/Bars/EnergyBar"]
margin_right = 100.0
margin_bottom = 40.0
rect_min_size = Vector2( 100, 40 )
custom_constants/margin_left = 20

[node name="Background" type="NinePatchRect" parent="HBoxContainer/Bars/EnergyBar/Count"]
margin_left = 20.0
margin_right = 100.0
margin_bottom = 40.0
texture = ExtResource( 8 )

[node name="Title" type="TextureRect" parent="HBoxContainer/Bars/EnergyBar/Count/Background"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -20.0
margin_right = 49.0
margin_bottom = 20.0
texture = ExtResource( 11 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Number" type="Label" parent="HBoxContainer/Bars/EnergyBar/Count/Background"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -50.0
margin_top = -21.0
margin_right = -9.0
margin_bottom = 19.0
custom_fonts/font = SubResource( 5 )
text = "88888888"
align = 2
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureProgress" type="TextureProgress" parent="HBoxContainer/Bars/EnergyBar"]
margin_left = 104.0
margin_right = 352.0
margin_bottom = 40.0
value = 50.0
texture_under = ExtResource( 9 )
texture_progress = ExtResource( 7 )

[node name="Label" type="Label" parent="HBoxContainer/Bars/EnergyBar/TextureProgress"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 103.0
margin_top = 13.0
margin_right = 143.0
margin_bottom = 27.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Count2" type="MarginContainer" parent="HBoxContainer/Bars/EnergyBar"]
margin_left = 356.0
margin_right = 456.0
margin_bottom = 40.0
rect_min_size = Vector2( 100, 40 )
custom_constants/margin_left = 20

[node name="Background" type="NinePatchRect" parent="HBoxContainer/Bars/EnergyBar/Count2"]
margin_left = 20.0
margin_right = 100.0
margin_bottom = 40.0
texture = ExtResource( 8 )

[node name="Title" type="Label" parent="HBoxContainer/Bars/EnergyBar/Count2/Background"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -20.0
margin_right = 49.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 3 )
text = "等级"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Number" type="Label" parent="HBoxContainer/Bars/EnergyBar/Count2/Background"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -50.0
margin_top = -21.0
margin_right = -9.0
margin_bottom = 19.0
custom_fonts/font = SubResource( 4 )
text = "41"
align = 2
valign = 1

[node name="Counters" type="HBoxContainer" parent="HBoxContainer"]
visible = false
margin_left = 1356.0
margin_top = 28.0
margin_right = 1560.0
margin_bottom = 68.0
size_flags_vertical = 4

[node name="BombCounter" parent="HBoxContainer/Counters" instance=ExtResource( 3 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 0.0
margin_right = 100.0
margin_bottom = 40.0
rect_min_size = Vector2( 100, 40 )

[node name="RupeeCounter" parent="HBoxContainer/Counters" instance=ExtResource( 4 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 104.0
margin_top = 0.0
margin_right = 204.0
margin_bottom = 40.0
rect_min_size = Vector2( 100, 40 )

[node name="Tween" type="Tween" parent="."]

[connection signal="mouse_entered" from="HBoxContainer/Bars/LifeBar/TextureProgress" to="." method="_on_hp_TextureProgress_mouse_entered"]
[connection signal="mouse_exited" from="HBoxContainer/Bars/LifeBar/TextureProgress" to="." method="_on_hp_TextureProgress_mouse_exited"]
[connection signal="mouse_entered" from="HBoxContainer/Bars/EnergyBar/TextureProgress" to="." method="_on_exp_TextureProgress_mouse_entered"]
[connection signal="mouse_exited" from="HBoxContainer/Bars/EnergyBar/TextureProgress" to="." method="_on_exp_TextureProgress_mouse_exited"]
